// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MeetingListItem /> snapshot should match snapshot 1`] = `
<MeetingListItem>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Empty"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-color="Empty"
          data-disabled={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with buttonGroup 1`] = `
<MeetingListItem
  buttonGroup={<ButtonGroup />}
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Empty"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-color="Empty"
          data-disabled={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
              data-position="middle"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-end-section"
            position="end"
          >
            <div
              className="md-meeting-list-item-end-section"
              data-position="end"
            >
              <ButtonGroup>
                <div
                  className="md-button-group-wrapper"
                  data-round={false}
                  data-spaced={false}
                />
              </ButtonGroup>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with className 1`] = `
<MeetingListItem
  className="example-class"
>
  <ListItemBase
    className="example-class md-meeting-list-item-wrapper"
    data-color="Empty"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="example-class md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-color="Empty"
          data-disabled={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with color 1`] = `
<MeetingListItem
  color="AcceptedActive"
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="AcceptedActive"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-color="AcceptedActive"
          data-disabled={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-AcceptedActive"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-AcceptedActive"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with id 1`] = `
<MeetingListItem
  id="example-id"
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Empty"
    id="example-id"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-color="Empty"
          data-disabled={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with image 1`] = `
<MeetingListItem
  image={
    <Icon
      name="placeholder"
    />
  }
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Empty"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-color="Empty"
          data-disabled={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-start-section"
            position="start"
          >
            <div
              className="md-meeting-list-item-start-section"
              data-position="start"
            >
              <div
                className="md-meeting-list-item-border"
                data-color="Empty"
              />
              <Icon
                name="placeholder"
                scale={12}
                strokeColor="none"
                weight="bold"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={12}
                    data-test="placeholder"
                    fill="currentColor"
                    height="100%"
                    style={
                      Object {
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with isDisabled 1`] = `
<MeetingListItem
  isDisabled={true}
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Empty"
    isDisabled={true}
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-color="Empty"
          data-disabled={true}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with style 1`] = `
<MeetingListItem
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Empty"
    isPadded={true}
    size={50}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-color="Empty"
          data-disabled={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          style={
            Object {
              "color": "pink",
            }
          }
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Empty"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;
